--- a/MsgToPdfConverter.csproj
+++ b/MsgToPdfConverter.csproj
@@ -9,6 +9,16 @@
     <StartupObject>MsgToPdfConverter.App</StartupObject>
     <PlatformTarget>x64</PlatformTarget>
     <ApplicationIcon>icon.ico</ApplicationIcon>
+
+    <!-- Version Information -->
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <Version>1.0.0</Version>
+    <AssemblyTitle>MSG to PDF Converter</AssemblyTitle>
+    <AssemblyDescription>Converts Outlook .msg files to PDF format with attachment extraction</AssemblyDescription>
+    <AssemblyCompany>SMCJV</AssemblyCompany>
+    <AssemblyProduct>MSG to PDF Converter</AssemblyProduct>
+    <AssemblyCopyright>Copyright © 2025</AssemblyCopyright>
   </PropertyGroup>
 
   <ItemGroup>
