--- a/MsgToPdfConverter.csproj
+++ b/MsgToPdfConverter.csproj
@@ -8,14 +8,13 @@
     <RootNamespace>MsgToPdfConverter</RootNamespace>
     <StartupObject>MsgToPdfConverter.App</StartupObject>
     <PlatformTarget>x64</PlatformTarget>
-    <ApplicationIcon>icon.ico</ApplicationIcon>
-
-    <!-- Version Information -->
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
-    <Version>1.0.0</Version>
+    <ApplicationIcon>icon.ico</ApplicationIcon>    <!-- Version Information -->
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
+    <Version>1.1.0</Version>
     <AssemblyTitle>MSG to PDF Converter</AssemblyTitle>
-    <AssemblyDescription>Converts Outlook .msg files to PDF format with attachment extraction</AssemblyDescription>
+    <AssemblyDescription>Converts Outlook .msg files to PDF format with Greek/Unicode character
+      support</AssemblyDescription>
     <AssemblyCompany>SMCJV</AssemblyCompany>
     <AssemblyProduct>MSG to PDF Converter</AssemblyProduct>
     <AssemblyCopyright>Copyright © 2025</AssemblyCopyright>
