--- a/MsgToPdfConverter.csproj
+++ b/MsgToPdfConverter.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="iText7" Version="7.1.15" />
     <PackageReference Include="PdfSharp" Version="6.2.0" />
     <PackageReference Include="Microsoft.Office.Interop.Outlook" Version="15.0.4797.1003" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
     <None Update="PdfAppendTestInput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
