--- a/MsgToPdfConverter.csproj
+++ b/MsgToPdfConverter.csproj
@@ -9,9 +9,9 @@
     <StartupObject>MsgToPdfConverter.App</StartupObject>
     <PlatformTarget>x64</PlatformTarget>
     <ApplicationIcon>icon.ico</ApplicationIcon>    <!-- Version Information -->
-    <AssemblyVersion>1.2.0.0</AssemblyVersion>
-    <FileVersion>1.2.0.0</FileVersion>
-    <Version>1.2.0</Version>
+    <AssemblyVersion>1.3.0.0</AssemblyVersion>
+    <FileVersion>1.3.0.0</FileVersion>
+    <Version>1.3.0</Version>
     <AssemblyTitle>MSG to PDF Converter</AssemblyTitle>
     <AssemblyDescription>Converts Outlook .msg files to PDF format with Greek/Unicode character
       support</AssemblyDescription>
@@ -29,6 +29,7 @@
     <PackageReference Include="iText7" Version="7.1.15" />
     <PackageReference Include="PdfSharp" Version="6.2.0" />
     <PackageReference Include="Microsoft.Office.Interop.Outlook" Version="15.0.4797.1003" />
+    <PackageReference Include="SharpCompress" Version="0.40.0" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
     <None Update="PdfAppendTestInput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
