Fix and finalize minimize-to-tray options, settings, and OptionsWindow layout/logic. All behaviors now robust and user-driven.

--- a/MsgToPdfConverter.csproj
+++ b/MsgToPdfConverter.csproj
@@ -9,9 +9,9 @@
     <StartupObject>MsgToPdfConverter.App</StartupObject>
     <PlatformTarget>x64</PlatformTarget>
     <ApplicationIcon>icon.ico</ApplicationIcon>    <!-- Version Information -->
-    <AssemblyVersion>1.3.0.0</AssemblyVersion>
-    <FileVersion>1.3.0.0</FileVersion>
-    <Version>1.3.0</Version>
+    <AssemblyVersion>1.4.0.0</AssemblyVersion>
+    <FileVersion>1.4.0.0</FileVersion>
+    <Version>1.4.0</Version>
     <AssemblyTitle>MSG to PDF Converter</AssemblyTitle>
     <AssemblyDescription>Converts Outlook .msg files to PDF format with Greek/Unicode character
       support</AssemblyDescription>
@@ -35,7 +35,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <Content Include="icon.ico">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 </Project>
