Trying Right click context menu1

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -9,5 +9,8 @@
     <Setting Name="DeleteMsgAfterConversion" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="EnableContextMenu" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
