--- a/MsgToPdfConverter.csproj
+++ b/MsgToPdfConverter.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>net48</TargetFramework>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
@@ -9,9 +9,9 @@
     <StartupObject>MsgToPdfConverter.App</StartupObject>
     <PlatformTarget>x64</PlatformTarget>
     <ApplicationIcon>icon.ico</ApplicationIcon>    <!-- Version Information -->
-    <AssemblyVersion>1.6.0.0</AssemblyVersion>
-    <FileVersion>1.6.0.0</FileVersion>
-    <Version>1.6.0</Version>
+    <AssemblyVersion>1.7.0.0</AssemblyVersion>
+    <FileVersion>1.7.0.0</FileVersion>
+    <Version>1.7.0</Version>
     <AssemblyTitle>MSG to PDF Converter</AssemblyTitle>
     <AssemblyDescription>Converts Outlook .msg files to PDF format with Greek/Unicode character
       support</AssemblyDescription>
